--- a/Soccer/res/values/strings.xml
+++ b/Soccer/res/values/strings.xml
@@ -4,22 +4,23 @@
     <!-- Main Titles -->
     <string name="app_name">0 Soccer</string>
     <string name="main_menu_title">Okparts Soccer</string>
-    
+
     <!-- Button Labels -->
     <string name="new_game_button_label">New Game</string>
     <string name="cont_game_button_label">Continue</string>
     <string name="create_button_label">Create</string>
-    
+
     <!-- Options Menu Labels -->
     <string name="options_menu_country">Create Your Country</string>
     <string name="options_menu_assoc">Create Your National Football Association</string>
-   	<string name="country_name_label">Country Name</string>
-   	<string name="country_nickname_label">Country Nickname</string>
-   	<string name="assoc_name_label">Football Association, Deutscher Fußball-Bund, etc.</string>
-    
+    <string name="country_name_label">Country Name</string>
+    <string name="country_nickname_label">Country Nickname</string>
+    <string name="assoc_name_label">Football Association, Deutscher Fußball-Bund, etc.</string>
+
     <!-- Default Values -->
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
     <string name="title_activity_new_game_options">NewGameOptions</string>
+    <string name="title_activity_splash">Splash</string>
 
 </resources>
