--- a/Soccer/res/values/strings.xml
+++ b/Soccer/res/values/strings.xml
@@ -4,7 +4,7 @@
     <!-- Main Titles -->
     <string name="app_name">0 Soccer</string>
     <string name="main_menu_title">Okparts Soccer</string>
-    <string name="splash_loading">Loading&#8230;</string>
+    <string name="main_menu_subtitle">Create Your League</string>
 
     <!-- Button Labels -->
     <string name="new_game_button_label">New Game</string>
@@ -12,11 +12,11 @@
     <string name="create_button_label">Create</string>
 
     <!-- Options Menu Labels -->
-    <string name="options_menu_country">Create Your Country</string>
+    <string name="options_manager_name_label">Enter your name</string>
     <string name="options_menu_assoc">Create Your National Football Association</string>
     <string name="country_name_label">Country Name</string>
     <string name="country_nickname_label">Country Nickname</string>
-    <string name="assoc_name_label">Football Association, Deutscher Fußball-Bund, etc.</string>
+    <string name="manager_name_hint">Manager\'s Name</string>
 
     <!-- Default Values -->
     <string name="action_settings">Settings</string>
