--- a/Soccer/res/values/strings.xml
+++ b/Soccer/res/values/strings.xml
@@ -17,11 +17,17 @@
     <string name="country_name_label">Country Name</string>
     <string name="country_nickname_label">Country Nickname</string>
     <string name="manager_name_hint">Manager\'s Name</string>
+    
+    <!-- New Game Build -->
+    <string name="new_game_message">Building League</string>
+    <string name="manager_name_error_blank">The Manager\'s Name cannot be blank.</string>
+    <string name="manager_name_error_letters">The Manager\'s Name may only contain letters and spaces.</string>
 
     <!-- Default Values -->
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
     <string name="title_activity_new_game_options">NewGameOptions</string>
     <string name="title_activity_splash">Splash</string>
+    <string name="title_activity_build_game">BuildGame</string>
 
 </resources>
